# server-client-test

./: .gitignore  README.md  cmp_results.md  install_env.sh  pyproject.toml  test_client.py  test_client.sh  test_server.py  test_server.sh
config/: config.yml  default.yml  test_1.yml  test_10.yml  test_11.yml  test_12.yml  test_13.yml  test_14.yml  test_15.yml  test_2.yml  test_3.yml  test_4.yml  test_5.yml  test_6.yml  test_8.yml  test_9.yml
result/: README.md
result/local/: test_1.csv  test_10.csv  test_11.csv  test_12.csv  test_13.csv  test_14.csv  test_15.csv  test_2.csv  test_3.csv  test_4.csv  test_5.csv  test_6.csv  test_7.csv  test_8.csv  test_9.csv
result/qqq/: test_1.csv  test_2.csv
src/api/: control_plane.py  run_client.py  run_server.py
src/base/: base_client.py  base_server.py
src/serializer/: __init__.py  base_serializer.py  json_serializer.py  msgpack_serializer.py  pickle_serializer.py
src/tcp/: tcp_client.py  tcp_server.py
src/udp/: udp_client.py  udp_client_simple.py  udp_config.py  udp_server.py  udp_server_simple.py
src/utils/: collecter.py  utils.py
src/web/: web_client.py  web_server.py
tools/: image_check.py  read_hdf5.py  read_hdf5_structure.py  summarize_result_metrics.py
