[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server-client-test"
version = "0.1.0"
description = "Policy server/client communication test toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy<2.0",
  "pandas<2.1",
  "PyYAML",
  "h5py",
  "msgpack",
  "websockets<13",
  "opencv-python",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
